database connection done

--- a/backend/evaluator-service/.env
+++ b/backend/evaluator-service/.env
@@ -1,5 +1,5 @@
 # Postgres connection string
-DB_URL=postgresql://postgres:root@localhost:5432/healthguard
+DB_URL=postgresql://ai_health_db_zuw2_user:aD2TEwCndmyrrVhqHWCok8AKd1VMhizf@dpg-d4inpqqdbo4c73bt4lj0-a.oregon-postgres.render.com/ai_health_db_zuw2
 # if running in Docker, host might be "db" instead of "localhost"
 
 # Gemini
